--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.weather {
+  color: #61dafb;
+}
+#weatherContainer {
+  padding-top: 130px;
+}
+.alert {
+  top: -130px;
+}
+#temperature {
+  font-weight: bold;
+  font-style: italic;
+  font-size: 35px;
+  padding-top: 25px;
+}
